--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Test</h1>
+    <div class="header">     
+        <ul class="left-links">
+            <li><a href="#">Logo</a></li>
+        </ul>
+        <ul class="right-links">
+            </a><li><a href="#">About</a></li>
+            </a><li><a href="#">Contact</a></li>
+            </a><li><a href="#">Sign In</a></li>
+        </ul>       
+    </div>
+
+    <div class="content">
+        <img src="">
+        <div class="input">
+            <input type="button">
+        </div>
+    </div>
+    
+    <div class="footer">
+        <ul class="left-links">
+            <li><a href="#">Advertise</a></li>
+            <li><a href="#">Info</a></li>
+        </ul>
+        <ul class="right-links">
+            </a><li><a href="#">Privacy</a></li>
+            </a><li><a href="#">Terms</a></li>
+        </ul> 
+    </div>
+
 </body>
 </html>
