--- a/index.html
+++ b/index.html
@@ -6,35 +6,22 @@
     <title>Lilathar</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="header">     
-        <ul class="left-links">
-            <li><a href="#">Logo</a></li>
-        </ul>
-        <ul class="right-links">
-            </a><li><a href="#">About</a></li>
-            </a><li><a href="#">Contact</a></li>
-            </a><li><a href="#">Sign In</a></li>
-        </ul>       
-    </div>
 
-    <div class="content">
-        <img src="">
-        <div class="input">
-            <input type="button">
-        </div>
-    </div>
+<body>
     
-    <div class="footer">
-        <ul class="left-links">
-            <li><a href="#">Advertise</a></li>
+    <header>
+        <div class="logo">
+          <img src="logo.png" alt="Logo">
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#">About</a></li>
             <li><a href="#">Info</a></li>
-        </ul>
-        <ul class="right-links">
-            </a><li><a href="#">Privacy</a></li>
-            </a><li><a href="#">Terms</a></li>
-        </ul> 
-    </div>
+            <li><a href="#">Sign In</a></li>
+          </ul>
+        </nav>
+    </header>
 
 </body>
+
 </html>
