--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
 </head>
 
 <body>
-    
+
     <header>
+
         <div class="logo">
           <img src="logo.png" alt="Logo">
         </div>
-        <nav>
+        
+        <div class="links">
           <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Info</a></li>
             <li><a href="#">Sign In</a></li>
           </ul>
-        </nav>
+        </div>
+
     </header>
+
+
+
 
 </body>
 
