add: welcome message and button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 
     </header>
 
-
+    <div class="welcome-text">
+        <div class="container">
+          <p>Welcome to the jungle</p>
+          <button class="signIn">Sign In</button>
+        </div>
+    </div>
 
 
 </body>
