add: section of boxes with information

--- a/index.html
+++ b/index.html
@@ -32,6 +32,32 @@
         </div>
     </div>
 
+    <div class="box-images">
+        <div class="box">
+          <img src="image1.jpg" alt="Image 1">
+          <div class="info">
+            <p>Information 1</p>
+          </div>
+        </div>
+        <div class="box">
+          <img src="image2.jpg" alt="Image 2">
+          <div class="info">
+            <p>Information 2</p>
+          </div>
+        </div>
+        <div class="box">
+          <img src="image3.jpg" alt="Image 3">
+          <div class="info">
+            <p>Information 3</p>
+          </div>
+        </div>
+        <div class="box">
+          <img src="image4.jpg" alt="Image 4">
+          <div class="info">
+            <p>Information 4</p>
+          </div>
+        </div>
+    </div>
 
 </body>
 
