add: quote section with filler text

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
         </div>
     </div>
 
+    <div class="quote">
+        <div class="container">
+          <h2>Inspiring Quote</h2>
+        </div>
+    </div>
+    
+
 </body>
 
 </html>
