add: last section with email and submit button

--- a/index.html
+++ b/index.html
@@ -64,7 +64,16 @@
           <h2>Inspiring Quote</h2>
         </div>
     </div>
-    
+
+    <div class="newsletter">
+        <div class="container">
+          <h3>Subscribe to our newsletter</h3>
+          <form>
+            <input type="email" placeholder="Enter your email">
+            <button type="submit">Sign Up</button>
+          </form>
+        </div>
+    </div>
 
 </body>
 
