--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
         </div>
     </div>
 
+    <footer>
+
+        <div class="copyright">
+          <p>&copy; 2023 Le Company. All rights reserved baby.</p>
+        </div>
+        
+        <div class="socials">
+          <a href="#"><img src="instagram.png" alt="Instagram"></a>
+          <a href="#"><img src="facebook.png" alt="Facebook"></a>
+          <a href="#"><img src="twitter.png" alt="Twitter"></a>
+        </div>
+
+    </footer>
+        
+
 </body>
 
 </html>
