fix: index to involve iframe add: css for different container

--- a/index.html
+++ b/index.html
@@ -32,37 +32,35 @@
         </div>
     </div>
 
-    <div class="box-images">
+    <div class="music-list">
+      <h3 class="mid">DnD Playlists</h3>
+      <div class="playcards">
+          <iframe class="playlist" src="https://www.youtube.com/embed/videoseries?si=Ul_5Mtc73Vlo8ICl&amp;list=PLh0HTSgSBtVJ3OkzslwzHbNPZT4WLEGt4" width="25%" height="380" frameBorder="0" allow="accelerometer; allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; gyroscope; picture-in-picture"></iframe>
 
-        <div class="box">
-          <img src="image1.jpg" alt="Image 1">
-          <div class="info">
-            <p>Information 1</p>
-          </div>
+          <iframe class="playlist" src="https://www.youtube.com/embed/videoseries?si=it3FKgbCTcNeLwIv&amp;list=PLh0HTSgSBtVLAREAwgQtxHvrQ7kAoUpCf" width="25%" height="380" frameBorder="0" allow="accelerometer; allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; gyroscope; picture-in-picture"></iframe>
+
+          <iframe class="playlist" src="https://www.youtube.com/embed/videoseries?si=Hb5xkyCjeWm4yMDW&amp;list=PLh0HTSgSBtVJLqxA_3D2rBTAp3o2csCkv" width="25%" height="380" frameBorder="0" allow="accelerometer; allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; gyroscope; picture-in-picture"></iframe>
         </div>
-        <div class="box">
-          <img src="image2.jpg" alt="Image 2">
-          <div class="info">
-            <p>Information 2</p>
-          </div>
+      </div>
+    
+    <div class="list-info">  
+        <ul>
+        <div class="info">
+          <li>General DnD session with combat involved</li>
+          <li>Darker tones to give that eerie feeling you want to convey </li>
+          <li>Feywild and chaotic vibes backed with grasslands touch</li>
         </div>
-        <div class="box">
-          <img src="image3.jpg" alt="Image 3">
-          <div class="info">
-            <p>Information 3</p>
-          </div>
-        </div>
-        
-    </div>
+        </ul>
+    </div> 
 
     <div class="quote">
         <div class="container">
-          <h2>Inspiring Quote</h2>
+          <h2>Eat my whole ass with no sauce</h2>
         </div>
     </div>
 
     <div class="newsletter">
-        <div class="container">
+        <div class="newscontainer">
           <h3>Subscribe to our newsletter</h3>
           <form>
             <input type="email" placeholder="Enter your email">
