fix: text content add: info text for playlists

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <header class="header">
     <div class="logo">
-      <img src="./images/birthday.png" alt="birthday cake" width="50">
+      <img src="./images/d20.png" alt="company logo" width="100">
     </div>
     <div class="header-right">
       <a href="#" class="header-link">About</a>
@@ -24,48 +24,51 @@
   <main>
 
     <div class="banner">
-      <h1>May your new age bring all the happiness and success you deserve!</h1>
-      <button class="sign-up">CAKE TIME 🍰</button>
+      <h1>New age of DnD is here with DnD buddy, register today!</h1>
+      <button class="sign-up">Sign up ❗</button>
     </div>
 
     <div class="hail">
         <div class="hail-container">
-      <h2>What day is it today?</h2>
-      <p>Shawty, obviously it is your <strong><em>BIRTHDAY</em></strong>.</p>
+      <h2>Best place to arrange your game in multiple campaigns</h2>
+      <p>Create, customize and share amongst your players, easy to start and easy to get into. <strong>DnD Buddy</strong></p>
       <div class="example-box"></div>
         </div>
     </div>
 
     <div class="features">
       <div class="feature">
-        <iframe src="https://www.youtube.com/embed/NnWVc4h3ihU?si=Rz6aycJmnUh0jf57" frameborder="0"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0vqGWjT0g9uLni6F8VKv9g?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <p class="feature-text">Get magic going by implementing this playlist!</p>
       </div>
 
       <div class="feature">
-        <iframe src="https://www.youtube.com/embed/pj5YDqxB9tg?si=7dOy631BhAoGm9QR" frameborder="0"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3j6OoomA0n8B1pGQA83NtB?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <p class="feature-text">Make those combat sessions impactful!</p>
       </div>
 
       <div class="feature">
-        <iframe src="https://www.youtube.com/embed/ZOoIw0TJy9M?si=Xh-iXd5CKVx0lujV" frameborder="0"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/68R6Mcd9YS57A2mXN98KHZ?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <p class="feature-text">For immersive Inn/Tavern vibes!</p>
       </div>
     </div>
 
     <div class="quote">
-      <h1>Happiest birthday to you Hava ❤️ - The Familia</h1>
+      <h1>"Stories of imagination tend to upset those without one" - <em>Terry Pratchett</em></h1>
     </div>
 
     <div class="fin">
       <div class="fin-container">
         <div class="fin-text">
-          <h2>This took longer than I wanted but hey, just wanted to show there is progress here! Thank you so much for all you have done ❤️</h2>
+          <h2>For many immersive, easy to use collaborative story telling programs for your DnD tables, sign up today and enjoy the benefits!</h2>
         </div>
-        <button class="roll-initiative">HAPPY BIRTHDAY 🎂</button>
+        <button class="roll-initiative">Roll Initiative! 🎲</button>
       </div>
     </div>
   </main>
 
   <footer class="footer">
-    <p class="footer-text">©Happy Birthday Cutie</p>
+    <p class="footer-text">©DnD Buddy </p>
     <div class="footer-links">
       <a href="#" class="social-link">Twitter</a>
       <a href="#" class="social-link">Instagram</a>
